feat : Button voir Détails Site E-Commerce & Projet Médiathèque

--- a/cv.html
+++ b/cv.html
@@ -74,9 +74,8 @@
                 <h2 class="font-normal">Orchestra - TravelSoft</h2>
                 <h2 class="font-normal">Paris, France</h2>
                 <h2 class="font-normal">8 semaines</h2>
-                <div class="d-flex justify-content-center mt-20"><img class="image-projet"
-                                                                      src="img/orchestra-plateforme.jpg"
-                                                                      alt="Orchestra - TravelSoft">
+                <div class="d-flex justify-content-center mt-20">
+                    <img class="image-projet" src="img/button_voir_details/Orchestra/orchestra-plateforme.jpg" alt="Orchestra - TravelSoft">
                 </div>
             </div>
             <div class="sectioncv3">
