--- a/projets.html
+++ b/projets.html
@@ -44,37 +44,6 @@
             <p class="text-page-title"><strong>Projets</strong></p>
         </div>
 
-        <div class="section project-card" id="projetLegendsBuster">
-            <div class="sectionprojet1">
-                <div class="d-flex">
-                    <div class="size-10x50 gradient-bg-bottom"></div>
-                    <div class="px-20">
-                        <h3>LegendsBuster</h3>
-                        <h2 class="font-normal">Code Game Jam - Janvier 2024</h2>
-                    </div>
-                </div>
-                <p class="p-5-15">
-                    LegendsBuster est un projet d'équipe réalisé lors de la Code Game 2024.
-                    Il s'agit d'un jeu vidéo de type plateformer "die and retry" qui nous a permis de découvrir Unity.
-                </p>
-                <div class="bonton-container">
-                    <button class="button button-primary button-size-sm open-project-modal"
-                            data-title="LegendsBuster"
-                            data-category="Jeu Vidéo | Code Game Jam 2024"
-                            data-description="LegendsBuster est un projet d'équipe passionnant, réalisé lors de la Code Game 2024. Ce jeu vidéo de type plateformer en 'die and retry' a été une opportunité unique de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. Nous avons dû concevoir les niveaux, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité. C'est une expérience qui a consolidé mes compétences en gestion de projet et en résolution de problèmes créative."
-                            data-tech="Unity, C#, Pixel Art, Plateformer"
-                            data-drive-link="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link"
-                            data-images="img/LegendsBuster.png,img/LegendsBuster_img2.png,img/LegendsBuster_img3.png">
-                        <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
-                        <span>Voir Détails</span>
-                    </button>
-                </div>
-            </div>
-            <div class="image-container">
-                <img src="img/LegendsBuster.png" alt="LegendsBuster">
-            </div>
-        </div>
-
         <div class="section project-card" id="projetEcommerce">
             <div class="sectionprojet1">
                 <div class="d-flex">
@@ -91,48 +60,57 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Site E-Commerce de Parfums"
                             data-category="Développement Web | Projet Universitaire"
-                            data-description="Ce projet consistait en la création complète d'un site web e-commerce dédié à la vente de parfums. Réalisé en PHP, il intègre une connexion robuste à une base de données MySQL pour gérer efficacement les utilisateurs, les produits, les commandes et les paniers. J'ai mis en place un système de navigation intuitif, des fiches produits détaillées, et un processus de commande sécurisé. Ce projet a été une excellente opportunité pour approfondir mes connaissances en développement back-end et en gestion de bases de données, tout en assurant une expérience utilisateur fluide et agréable."
-                            data-tech="PHP, MySQL, HTML, CSS, JavaScript"
+                            data-description="Le site permet aux utilisateurs de naviguer à travers une sélection de parfums, de les ajouter à leur panier et de passer des commandes. Une interface pour les utilisateurs, ainsi que pour l'administrateur pour gérer les produits et les commandes. Le projet a été fais avec une structure MVC (Modèle-Vue-Contrôleur)"
+                            data-tech="PHP, MySQL, HTML, CSS"
+                            data-apports="
+                            J'ai fais une grande partie du PHP, la gestion des utilisateurs, des produits et des ventes.
+                            J'ai également mis en place la base de données et la connexion a celle-ci."
                             data-github-link="https://github.com/M2M2005/E-Commerce"
                             data-web-link="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php"
-                            data-images="img/site-e-commerce.png,img/ecommerce_img2.png,img/ecommerce_img3.png">
+                            data-images="
+                            img/button_voir_details/E-Commerce/E-Commerce0.png,
+                            img/button_voir_details/E-Commerce/E-Commerce2.png,
+                            img/button_voir_details/E-Commerce/E-Commerce1.png,
+                            img/button_voir_details/E-Commerce/E-Commerce3.png,
+                            img/button_voir_details/E-Commerce/E-Commerce4.png">
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
                 </div>
             </div>
             <div class="image-container">
-                <img src="img/site-e-commerce.png" alt="Site E-Commerce">
+                <img src="img/button_voir_details/E-Commerce/E-Commerce0.png" alt="Site E-Commerce">
             </div>
         </div>
 
-        <div class="section project-card" id="projetPortfolio">
+        <div class="section project-card" id="ProjetMédiathèque">
             <div class="sectionprojet1">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
-                        <h3>Site Web Portfolio</h3>
-                        <h2 class="font-normal">Projet Personnel - Actuellement</h2>
+                        <h3>Projet Médiathèque</h3>
+                        <h2 class="font-normal">Projet Universitaire - Mai 2025</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
-                    J'ai créé ce site web portfolio pour mettre en avant mes compétences, mes aptitudes et mes projets. Il présente également mon parcours académique et mes expériences.
+                    Dans le cadre de ce projet, j'ai développé un site web de médiathèque en utilisant JavaScript. Le site permet de gérer les emprunts de livres, les utilisateurs et les retours.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
-                            data-title="Création de Mon Portfolio Personnel"
-                            data-category="Développement Web | Projet Personnel"
-                            data-description="Ce site web est mon portfolio personnel, conçu pour présenter mes compétences techniques, mes aptitudes et l'ensemble de mes projets. Il met en lumière mon parcours académique et mes expériences professionnelles, offrant une vue d'ensemble de mon savoir-faire en conception web. L'objectif était de créer une interface claire et intuitive pour permettre aux visiteurs de découvrir mes réalisations et mon profil. Le développement de ce portfolio est un processus continu, où j'intègre régulièrement de nouvelles fonctionnalités et améliorations, reflétant ainsi mon apprentissage et ma progression."
-                            data-tech="HTML, CSS, JavaScript, Responsive Design"
-                            data-github-link="https://github.com/M2M2005/Site-Web"
-                            data-web-link="https://cyprienbons.com" data-images="img/site-this.png,img/portfolio_img2.png,img/portfolio_img3.png">
+                            data-title="Projet Médiathèque"
+                            data-category="Développement Web | Projet Universitaire"
+                            data-description="Le but de ce projet était d'apprendre le développement web en JavaScript réactif."
+                            data-tech="HTML, CSS, JS"
+                            data-github-link="https://github.com/M2M2005/ProjetMediatheque"
+                            data-web-link="https://m2m2005.github.io/ProjetMediatheque/src/mediatheque.html"
+                            data-images="img/button_voir_details/Projet_Mediatheque/projet_mediatheque1.png,img/button_voir_details/Projet_Mediatheque/projet_mediatheque2.png">
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
                 </div>
             </div>
             <div class="image-container">
-                <img src="img/site-this.png" alt="Port Folio">
+                <img src="img/button_voir_details/Projet_Mediatheque/projet_mediatheque1.png" alt="Projet Médiathèque">
             </div>
         </div>
 
@@ -197,9 +175,39 @@
                 <img src="img/Excel_Compétition.png" alt="Exel">
             </div>
         </div>
+
+        <div class="section project-card" id="projetLegendsBuster">
+            <div class="sectionprojet1">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
+                        <h3>LegendsBuster</h3>
+                        <h2 class="font-normal">Code Game Jam - Janvier 2024</h2>
+                    </div>
+                </div>
+                <p class="p-5-15">
+                    LegendsBuster est un projet d'équipe réalisé lors de la Code Game 2024.
+                    Il s'agit d'un jeu vidéo de type plateformer "die and retry" qui nous a permis de découvrir Unity.
+                </p>
+                <div class="bonton-container">
+                    <button class="button button-primary button-size-sm open-project-modal"
+                            data-title="LegendsBuster"
+                            data-category="Jeu Vidéo | Code Game Jam 2024"
+                            data-description="LegendsBuster est un projet d'équipe passionnant, réalisé lors de la Code Game 2024. Ce jeu vidéo de type plateformer en 'die and retry' a été une opportunité unique de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. Nous avons dû concevoir les niveaux, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité. C'est une expérience qui a consolidé mes compétences en gestion de projet et en résolution de problèmes créative."
+                            data-tech="Unity, C#, Pixel Art, Plateformer"
+                            data-drive-link="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link"
+                            data-images="img/LegendsBuster.png,img/LegendsBuster_img2.png,img/LegendsBuster_img3.png">
+                        <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
+                        <span>Voir Détails</span>
+                    </button>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="img/LegendsBuster.png" alt="LegendsBuster">
+            </div>
+        </div>
     </div>
 </div>
-
 <div class="modal-container" id="projectModalContainer">
     <div class="overlay" id="overlay"></div>
     <section class="project-modal" role="dialog" aria-modal="true" aria-labelledby="project-modal-title">
@@ -208,13 +216,18 @@
         </button>
 
         <div class="modal-content">
-            <div class="modal-images-carousel">
-                <div class="modal-image-display" id="modalImageDisplay">
+            <div class="modal-left-content">
+                <div class="modal-images-carousel">
+                    <div class="modal-image-display" id="modalImageDisplay"></div>
+                    <div class="carousel-nav" id="carouselNav"></div>
+                    <button class="carousel-arrow prev" id="prevImageBtn">&#10094;</button>
+                    <button class="carousel-arrow next" id="nextImageBtn">&#10095;</button>
                 </div>
-                <div class="carousel-nav" id="carouselNav">
-                </div>
-                <button class="carousel-arrow prev" id="prevImageBtn">&#10094;</button>
-                <button class="carousel-arrow next" id="nextImageBtn">&#10095;</button>
+                <h4>Technologies Utilisées</h4>
+                <p id="modalProjectTech"></p>
+
+                <h4 id="apportsTitle" style="display: none;">Mes Apports Clés</h4>
+                <ul id="modalProjectApports" style="display: none;"></ul>
             </div>
 
             <div class="modal-info">
@@ -224,16 +237,11 @@
                 <h4>Description</h4>
                 <p id="modalProjectDescription"></p>
 
-                <h4>Technologies Utilisées</h4>
-                <p id="modalProjectTech"></p>
-
-                <div class="modal-links-container" id="modalLinksContainer">
-                </div>
+                <div class="modal-links-container" id="modalLinksContainer"></div>
             </div>
         </div>
     </section>
 </div>
-
 </body>
 <footer>
     <div class="footer">
