feat : Button voir Détails Site Referendum & Escalade

--- a/projets.html
+++ b/projets.html
@@ -130,17 +130,27 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Référendums Sécurisés"
                             data-category="Développement d'Application | Universitaire"
-                            data-description="Ce projet universitaire a porté sur la conception et le développement d'un système de référendums sécurisés. L'objectif principal était de permettre à une entreprise de gérer des votes de manière entièrement cryptée et confidentielle. Nous avons implémenté des protocoles de sécurité robustes pour garantir l'intégrité des votes et l'anonymat des participants. Ce projet a renforcé mes compétences en sécurité informatique et en développement d'applications back-end complexes, avec un accent particulier sur la cryptographie et la gestion de données sensibles."
-                            data-tech="Java, Sécurité, Cryptographie, Base de données"
+                            data-description="Ce projet était axées sur la cryptographie nous devions sécurisé via Elgamal et aussi empecher le bourrage d'urne. Aussi on devait beaucoup communiquer avec un client, nous avons donc mis en place un système de gestion de projet agile. Durant ce projet nous devions rendre des sprint ce qui nous a permis de mieux gérer notre temps et de mieux communiquer avec le client."
+                            data-tech="Java, Cryptographie, Javafx"
                             data-github-link="https://github.com/M2M2005/Referendum"
-                            data-images="img/referendum.png,img/referendum_img2.png">
+                            data-youtube-link="https://www.youtube.com/watch?v=F3I_4daMcuk"
+                            data-images="img/button_voir_details/Referendum/referendum1.png,
+                            img/button_voir_details/Referendum/referendum4.png,
+                            img/button_voir_details/Referendum/referendum2.png,
+                            img/button_voir_details/Referendum/referendum3.png,
+                            img/button_voir_details/Referendum/referendum5.png"
+                            data-apports="
+                            Connexion des application avec le serveur ||
+                            Implémentation des interface JavaFx ||
+                            Implémentation de test Automatique (Voir vidéo)"
+                    >
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
                 </div>
             </div>
             <div class="image-container">
-                <img src="img/referendum.png" alt="Referendum">
+                <img src="img/button_voir_details/Referendum/referendum1.png" alt="Referendum">
             </div>
         </div>
 
@@ -159,20 +169,25 @@
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Scoring pour Compétition d'Escalade"
-                            data-category="Automatisation & Développement Web | Projet Personnel"
-                            data-description="dynamiquement à l'API Google Sheets pour récupérer et afficher les résultats en temps réel. Ce projet a été une excellente occasion d'explorer l'interopérabilité entre les services Google, le développement web côté client, et l'automatisation de processus métier."
-                            data-tech="Google Sheets, Google Apps Script (GAS), JavaScript, HTML, CSS, API Google Sheets"
+                            data-category="Sheets & Dev Web | Projet Personnel"
+                            data-description="L'objectif principal était de calculer les points, puis les affichées sur une page web (En JS via des requette a l'API Google sheet et les imprimer au format pdf (Via Google Apps Script). Aussi dans le sxcel j'ai des bouton me permetant de créer des catégories automatique ou de update toutes les formule, ceci a aussi était fait avec Google Aps Script. Le projet est en cours de développement, mais il est déjà fonctionnel pour les compétitions."
+                            data-tech="Sheets, Google Apps Script, API Google Sheets, JavaScript"
                             data-drive-link="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing"
                             data-github-link="https://github.com/M2M2005/Site-Web"
                             data-web-link="https://cobescalade.cyprienbons.com/"
-                            data-images="img/Excel_Compétition.png,img/excel_competition_img2.png,img/excel_competition_img3.png">
+                            data-images="
+                            img/button_voir_details/Competition_Escalade/competition_Escalade2.png,
+                            img/button_voir_details/Competition_Escalade/competition_Escalade5.png,
+                            img/button_voir_details/Competition_Escalade/competition_Escalade3.png,
+                            img/button_voir_details/Competition_Escalade/competition_Escalade1.png,
+                            img/button_voir_details/Competition_Escalade/competition_Escalade4.png">
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
                 </div>
             </div>
             <div class="image-container">
-                <img src="img/Excel_Compétition.png" alt="Exel">
+                <img src="img/button_voir_details/Competition_Escalade/competition_Escalade2.png" alt="Exel">
             </div>
         </div>
 
